@@ -2,6 +2,7 @@ This file documents the revision history for mod_gearman.
 
 1.2.4  ...
           - fixed eventhandlers not being passed to worker
+          - fixed shared memory not beeing cleaned on exit
           - internal changes to support freebsd
 
 1.2.2  Tue Feb  7 18:06:02 CET 2012
